--- a/package.json
+++ b/package.json
@@ -9,7 +9,9 @@
     "test": "jest",
     "test:watch": "jest --watch",
     "test:coverage": "jest --coverage",
-    "prepare": "husky"
+    "prepare": "husky",
+    "supabase-login": "npx -y supabase@latest login",
+    "supabase-generate-types": "npx -y supabase@latest gen types typescript --project-id face-match --schema public > lib/supabase.types.ts"
   },
   "dependencies": {
     "@supabase/ssr": "latest",
