--- a/package.json
+++ b/package.json
@@ -14,6 +14,7 @@
     "supabase-generate-types": "npx -y supabase@latest gen types typescript --project-id face-match --schema public > lib/supabase.types.ts"
   },
   "dependencies": {
+    "@floating-ui/react": "^0.27.17",
     "@headlessui/react": "^2.2.9",
     "@supabase/ssr": "latest",
     "@supabase/supabase-js": "latest",
