--- a/.vscode/settings.json
+++ b/.vscode/settings.json
@@ -2,6 +2,11 @@
   "cSpell.words": ["supabase"],
   "editor.defaultFormatter": "esbenp.prettier-vscode",
   "editor.formatOnSave": true,
+  "editor.codeActionsOnSave": {
+    "source.fixAll.eslint": "explicit",
+    "source.organizeImports": "explicit"
+  },
+  "eslint.experimental.useFlatConfig": true,
   "css.lint.unknownAtRules": "ignore",
   "diffEditor.maxComputationTime": 0,
   "diffEditor.ignoreTrimWhitespace": true,
